<resources>
    <string name="app_name">Intents Before Action</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_app">Google Maps App</string>
    <string name="google_maps_web">Google Maps Web</string>
    <string name="system_settings">System Settings</string>
    <string name="show_address_in_google_maps_app">Show Address In Maps</string>
    <string name="show_address_in_google_maps_navigation">Show Address In Navigation</string>
    <string name="enter_an_address_hint">24th St Mission, San Francisco, CA</string>
    <string name="show_address_in_google_maps_web">Show Address In Maps Web</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="show_address_in_street_view">Show Address in Street View</string>
    <string name="latitude_sample">37.7648</string>
    <string name="longitude_sample">-122.463</string>
    <string name="show_lat_long_in_maps_web"><![CDATA[Show Lat & Long in Maps Web]]></string>
    <string name="enter_zoom_1_to_20">Enter Zoom value: 1–20</string>
    <string name="show_location_services">Show Location Services</string>
    <string name="test_sound">Test Sound</string>
    <string name="media">Media</string>
    <string name="enter_path_or_url">Enter Path or URL</string>
    <string name="clear">Clear</string>
    <string name="pick_file">Pick File</string>
    <string name="play_audio">Play Audio</string>
    <string name="play_video">Play Video</string>
    <string name="view_image">View Image</string>
    <string name="to_email_addresses">Enter To Email Addresses \",\" separated</string>
    <string name="with_subject">With Subject</string>
    <string name="with_body">With Body</string>
    <string name="send_email">Send Email</string>
    <string name="with_attachment">With Attachment</string>
    <string name="email">Email</string>
    <string name="share_email">Share Email</string>
    <string name="open_inbox">Open Inbox</string>
    <string name="some_email">someEmail@gmail.com</string>
    <string name="some_subject">Some Subject</string>
    <string name="some_body">Some Body</string>
    <string name="open_with_play">Open w/ Google Play</string>
    <string name="open_with_amazon">Open w/ Amazon</string>
    <string name="search_with_amazon">Search w/ Amazon</string>
    <string name="enter_app_name">Enter App Name</string>
    <string name="instagram">instagram</string>
    <string name="store">Store</string>
    <string name="search_with_play">Search w/ Google Play</string>
    <string name="enter_phone_numbers">Enter Phone Numbers \",\" separated</string>
    <string name="sample_number">18004238558</string>
    <string name="enter_message">Enter Message to Send</string>
    <string name="sample_message">Hello World!</string>
    <string name="call_number">Call Number</string>
    <string name="send_sms">Send SMS</string>
    <string name="phone">Phone</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="is_app_installed">Is App Installed</string>
    <string name="launch_app">Launch App</string>
    <string name="app_package">App Package</string>
    <string name="create_shortcut">Create Shortcut For Current App</string>
    <string name="apps">Applications</string>
    <string name="sample_app_package">com.google.android.googlequicksearchbox</string>
    <string name="youtube">Youtube</string>
    <string name="sample_youtube_video_id">dQw4w9WgXcQ</string>
    <string name="youtube_video_id_or_name">Enter Youtube ID or Name of video</string>
    <string name="watch_youtube_id">Watch Youtube Id</string>
    <string name="search_youtube">Search Youtube</string>
    <string name="show_settings">Show Settings</string>
    <string name="show_apn_settings">Show APN Settings</string>
    <string name="show_wireless_settings">Show Wireless Settings</string>
    <string name="show_airplane_mode_settings">Show Airplane Mode Settings</string>
    <string name="show_accessibility_settings">Show Accessibility Settings</string>
    <string name="show_usage_settings">Show Usage Settings</string>
    <string name="show_security_settings">Show Security Settings</string>
    <string name="show_privacy_settings">Show Privacy Settings</string>
</resources>
