<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    android:padding="@dimen/double_spacing">

    <EditText
        android:id="@+id/etPhoneNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_number"
        android:hint="@string/enter_phone_numbers"/>

    <Button
        android:id="@+id/btnPickContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/pick_contact"/>

    <EditText
        android:id="@+id/etBodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_message"
        android:hint="@string/enter_message"/>

    <Button
        android:id="@+id/btnCallNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/call_number"/>

    <Button
        android:id="@+id/btnSendSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/send_sms"/>
</LinearLayout>