<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    android:padding="@dimen/double_spacing">


    <EditText
        android:id="@+id/etAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/instagram"
        android:hint="@string/enter_app_name"/>

    <Button
        android:id="@+id/btnGooglePlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:hint="@string/open_with_play"/>

    <Button
        android:id="@+id/btnGooglePlaySearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:hint="@string/search_with_play"/>

    <Button
        android:id="@+id/btnAmazon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:hint="@string/open_with_amazon"/>

    <Button
        android:id="@+id/btnAmazonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:hint="@string/search_with_amazon"/>
</LinearLayout>