<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    android:padding="@dimen/double_spacing">

    <EditText
        android:id="@+id/etYoutube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_youtube_video_id"
        android:hint="@string/youtube_video_id_or_name" />

    <Button
        android:id="@+id/btnClearYoutube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"/>

    <Button
        android:id="@+id/btnYoutubeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/watch_youtube_id"/>

    <Button
        android:id="@+id/btnYoutubeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/search_youtube"/>
</LinearLayout>