<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    android:padding="@dimen/double_spacing">


    <EditText
        android:id="@+id/etPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_path_or_url"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/double_spacing">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"/>

        <Button
            android:id="@+id/btnFromFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_spacing"
            android:text="@string/pick_file"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnPlayAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/play_audio"/>

    <Button
        android:id="@+id/btnPlayVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/play_video"/>

    <Button
        android:id="@+id/btnViewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/view_image"/>


</LinearLayout>