<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    android:padding="@dimen/double_spacing">

    <EditText
        android:id="@+id/etAppPackage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_app_package"
        android:hint="@string/app_package"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/double_spacing">

        <Button
            android:id="@+id/btnClearPackageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"/>

        <Button
            android:id="@+id/btnLaunchApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_app"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateShortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing"
        android:text="@string/create_shortcut"/>

</LinearLayout>