<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/double_spacing">

    <Button
        android:id="@+id/btnGoogleMapsApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_maps_app"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnGoogleMapsWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_maps_web"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnSystemSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_settings"
        android:textColor="@color/black"/>

</LinearLayout>